--- a/EjemplosASP/Display y DisplayTemplates/Display y DisplayTemplates.csproj
+++ b/EjemplosASP/Display y DisplayTemplates/Display y DisplayTemplates.csproj
@@ -188,7 +188,7 @@
     <Content Include="Views\Home\DisplayTemplates\Boolean.cshtml" />
     <Content Include="Views\Home\DisplayTemplates\DateTime.cshtml" />
     <Content Include="Views\Home\DisplayTemplates\Persona.cshtml" />
-    <Content Include="Views\Home\DisplayTemplates\String.cshtml" />
+    <Content Include="Views\Home\EditorTemplates\DateTime.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
